--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teammaker",
   "version": "1.0.0",
-  "description": "Machine learning based team matching and generation.",
+  "description": "Vector Space Model based team matching and generation.",
   "scripts": {
     "start": "node ./bin/www",
     "build": "del-cli public/js/app && webpack --config webpack.config.dev.js --progress --profile --watch",
